RP-895 Address SonarQube feedback