@@ -1,6 +1,7 @@
 package org.ihtsdo.termserver.scripting.domain.mrcm;
 
 import org.ihtsdo.otf.exception.TermServerScriptException;
+import org.ihtsdo.otf.rest.client.terminologyserver.pojo.Component;
 import org.ihtsdo.termserver.scripting.GraphLoader;
 import org.ihtsdo.termserver.scripting.domain.Concept;
 import org.ihtsdo.termserver.scripting.domain.ScriptConstants;
@@ -22,6 +23,7 @@ import java.util.stream.Collectors;
 //id,effectiveTime,active,moduleId,refsetId,referencedComponentId,rangeConstraint,attributeRule,ruleStrengthId,contentTypeId
 public class MRCMAttributeRangeManager implements ScriptConstants  {
 
+	private static final String IN_MODULE = " in module ";
 	private static final Logger LOGGER = LoggerFactory.getLogger(MRCMAttributeRangeManager.class);
 
 	private GraphLoader gl;
@@ -118,14 +120,10 @@ public class MRCMAttributeRangeManager implements ScriptConstants  {
 		}
 	}
 
-	private void addToMRCMAttributeMap(Map<Concept, Map<String, MRCMAttributeRange>> mrcmStagingAttribMap, Concept refComp, MRCMAttributeRange ar) throws TermServerScriptException {
+	private void addToMRCMAttributeMap(Map<Concept, Map<String, MRCMAttributeRange>> mrcmStagingAttribMap, Concept refComp, MRCMAttributeRange ar) {
 		//We'll add all entries to a staging structure initially, to allow conflicts to be resolved
 		//in a delta.
-		Map<String, MRCMAttributeRange> attribRanges = mrcmStagingAttribMap.get(refComp);
-		if (attribRanges == null) {
-			attribRanges = new HashMap<>();
-			mrcmStagingAttribMap.put(refComp, attribRanges);
-		}
+		Map<String, MRCMAttributeRange> attribRanges = mrcmStagingAttribMap.computeIfAbsent(refComp, k -> new HashMap<>());
 		//This will overwrite any existing MRCM row with the same UUID
 		//And allow multiple rows for exist for a given referenced component id
 		attribRanges.put(ar.getId(), ar);
@@ -138,31 +136,37 @@ public class MRCMAttributeRangeManager implements ScriptConstants  {
 		mrcmAttributeRangeMap.clear();
 		for (Concept refComp : mrcmStagingAttributeRangeMap.keySet()) {
 			Map<String, MRCMAttributeRange> conflictingRanges = mrcmStagingAttributeRangeMap.get(refComp);
-			if (conflictingRanges.size() == 1) {
-				//No Conflict in this case
-				mrcmAttributeRangeMap.put(refComp, conflictingRanges.values().iterator().next());
-			} else {
-				//Assuming the conflict is between an International Row and an Extension Row for the same concept
-				//but with distinct UUIDs, we'll let the extension row win.
-				MRCMAttributeRange winningAR = pickWinningMRCMAttributeRange(refComp, conflictingRanges, conflictingAttributes);
-				if (winningAR == null) {
-					//We're OK as long as only 1 of the ranges is active.  Store that one.   Otherwise, add to conflicts list to report
-					for (MRCMAttributeRange ar : conflictingRanges.values()) {
-						MRCMAttributeRange existing = mrcmAttributeRangeMap.get(refComp);
-						//We have a problem if the existing one is also active
-						//We'll collect all conflicts up and report back on all of them in the calling function
-						if (existing != null && existing.isActive() && ar.isActive()) {
-							String contentType = translateContentType(ar.getContentTypeId());
-							String detail = " (" + ar.getId() + " in module " + ar.getModuleId() + " vs " + existing.getId() + " in module " + existing.getModuleId() + ")";
-							conflictingAttributes.add(contentType + ": " + refComp + detail);
-							acceptablyFinalised = false;
-						} else if (existing == null || ar.isActive()) {
-							mrcmAttributeRangeMap.put(refComp, ar);
-						}
+			acceptablyFinalised = finaliseConflictingRanges(conflictingRanges, refComp, mrcmAttributeRangeMap, conflictingAttributes) && acceptablyFinalised;
+		}
+		return acceptablyFinalised;
+	}
+
+	private boolean finaliseConflictingRanges(Map<String, MRCMAttributeRange> conflictingRanges, Concept refComp, Map<Concept, MRCMAttributeRange> mrcmAttributeRangeMap, List<String> conflictingAttributes) throws TermServerScriptException {
+		boolean acceptablyFinalised = true;
+		if (conflictingRanges.size() == 1) {
+			//No Conflict in this case
+			mrcmAttributeRangeMap.put(refComp, conflictingRanges.values().iterator().next());
+		} else {
+			//Assuming the conflict is between an International Row and an Extension Row for the same concept
+			//but with distinct UUIDs, we'll let the extension row win.
+			MRCMAttributeRange winningAR = pickWinningMRCMAttributeRange(refComp, conflictingRanges, conflictingAttributes);
+			if (winningAR == null) {
+				//We're OK as long as only 1 of the ranges is active.  Store that one.   Otherwise, add to conflicts list to report
+				for (MRCMAttributeRange ar : conflictingRanges.values()) {
+					MRCMAttributeRange existing = mrcmAttributeRangeMap.get(refComp);
+					//We have a problem if the existing one is also active
+					//We'll collect all conflicts up and report back on all of them in the calling function
+					if (existing != null && existing.isActive() && ar.isActiveSafely()) {
+						String contentType = translateContentType(ar.getContentTypeId());
+						String detail = " (" + ar.getId() + IN_MODULE + ar.getModuleId() + " vs " + existing.getId() + IN_MODULE + existing.getModuleId() + ")";
+						conflictingAttributes.add(contentType + ": " + refComp + detail);
+						acceptablyFinalised = false;
+					} else if (existing == null || ar.isActive()) {
+						mrcmAttributeRangeMap.put(refComp, ar);
 					}
-				} else {
-					mrcmAttributeRangeMap.put(refComp, winningAR);
 				}
+			} else {
+				mrcmAttributeRangeMap.put(refComp, winningAR);
 			}
 		}
 		return acceptablyFinalised;
@@ -174,7 +178,7 @@ public class MRCMAttributeRangeManager implements ScriptConstants  {
 		MRCMAttributeRange extAR = pickActiveMRCMAttributeRange(conflictingRanges, false);
 		if (intAR != null && extAR != null) {
 			String contentType = translateContentType(intAR.getContentTypeId());
-			String detail = " (" + intAR.getId() + " in module " + intAR.getModuleId() + " vs " + extAR.getId() + " in module " + extAR.getModuleId() + ")";
+			String detail = " (" + intAR.getId() + IN_MODULE + intAR.getModuleId() + " vs " + extAR.getId() + IN_MODULE + extAR.getModuleId() + ")";
 			conflictingAttributes.add(contentType + ": " + refComp + detail);
 			return extAR;
 		}
@@ -183,9 +187,9 @@ public class MRCMAttributeRangeManager implements ScriptConstants  {
 
 	private MRCMAttributeRange pickActiveMRCMAttributeRange(Map<String, MRCMAttributeRange> conflictingRanges, boolean isInternational) {
 		List<MRCMAttributeRange> activeRanges = conflictingRanges.values().stream()
-				.filter(ar -> ar.isActive())
+				.filter(Component::isActive)
 				.filter(ar -> isInternational == SnomedUtils.isInternational(ar))
-				.collect(Collectors.toList());
+				.toList();
 		if (activeRanges.size() == 1) {
 			return activeRanges.get(0);
 		}
@@ -204,7 +208,7 @@ public class MRCMAttributeRangeManager implements ScriptConstants  {
 		boolean newCoordAcceptable = finaliseMRCMAttributeRange(mrcmStagingAttributeRangeMapNewPreCoord, mrcmAttributeRangeMapNewPreCoord, conflictingAttributes);
 		boolean allContentAcceptable = preCoordAcceptable && postCoordAcceptable && allCoordAcceptable && newCoordAcceptable;
 
-		if (conflictingAttributes.size() > 0) {
+		if (!conflictingAttributes.isEmpty()) {
 			String msg = "MRCM Attribute Range File conflicts: \n";
 			msg += conflictingAttributes.stream().collect(Collectors.joining(",\n"));
 			if (allContentAcceptable || !gl.isRunIntegrityChecks()) {
