@@ -1,6 +1,7 @@
 package org.ihtsdo.termserver.scripting.domain.mrcm;
 
 import org.ihtsdo.otf.exception.TermServerScriptException;
+import org.ihtsdo.otf.rest.client.terminologyserver.pojo.Component;
 import org.ihtsdo.termserver.scripting.GraphLoader;
 import org.ihtsdo.termserver.scripting.domain.Concept;
 import org.ihtsdo.termserver.scripting.domain.ScriptConstants;
@@ -22,6 +23,7 @@ import java.util.stream.Collectors;
 //id,effectiveTime,active,moduleId,refsetId,referencedComponentId,domainConstraint,parentDomain,proximalPrimitiveConstraint,proximalPrimitiveRefinement,domainTemplateForPrecoordination,domainTemplateForPostcoordination,guideURL
 public class MRCMDomainManager implements ScriptConstants  {
 
+	private static final String IN_MODULE = " in module ";
 	private static final Logger LOGGER = LoggerFactory.getLogger(MRCMDomainManager.class);
 
 	private GraphLoader gl;
@@ -73,14 +75,10 @@ public class MRCMDomainManager implements ScriptConstants  {
 		}
 	}
 
-	private void addToMRCMDomainMap(Map<Concept, Map<String, MRCMDomain>> mrcmStagingAttribMap, Concept refComp, MRCMDomain ar) throws TermServerScriptException {
+	private void addToMRCMDomainMap(Map<Concept, Map<String, MRCMDomain>> mrcmStagingAttribMap, Concept refComp, MRCMDomain ar) {
 		//We'll add all entries to a staging structure initially, to allow conflicts to be resolved
 		//in a delta.
-		Map<String, MRCMDomain> attribRanges = mrcmStagingAttribMap.get(refComp);
-		if (attribRanges == null) {
-			attribRanges = new HashMap<>();
-			mrcmStagingAttribMap.put(refComp, attribRanges);
-		}
+		Map<String, MRCMDomain> attribRanges = mrcmStagingAttribMap.computeIfAbsent(refComp, k -> new HashMap<>());
 		//This will overwrite any existing MRCM row with the same UUID
 		//And allow multiple rows for exist for a given referenced component id
 		attribRanges.put(ar.getId(), ar);
@@ -88,46 +86,52 @@ public class MRCMDomainManager implements ScriptConstants  {
 
 	private boolean finaliseMRCMDomain(
 			Map<Concept, Map<String, MRCMDomain>> mrcmStagingDomainMap,
-			Map<Concept, MRCMDomain> mrcmDomainMap, List<String> conflictingAttributes) throws TermServerScriptException {
+			Map<Concept, MRCMDomain> mrcmDomainMap, List<String> conflictingAttributes) {
 		boolean acceptablyFinalised = true;
 		mrcmDomainMap.clear();
-		for (Concept refComp : mrcmStagingDomainMap.keySet()) {
-			Map<String, MRCMDomain> conflictingRanges = mrcmStagingDomainMap.get(refComp);
+		for (Concept domain : mrcmStagingDomainMap.keySet()) {
+			Map<String, MRCMDomain> conflictingRanges = mrcmStagingDomainMap.get(domain);
 			if (conflictingRanges.size() == 1) {
 				//No Conflict in this case
-				mrcmDomainMap.put(refComp, conflictingRanges.values().iterator().next());
+				mrcmDomainMap.put(domain, conflictingRanges.values().iterator().next());
 			} else {
 				//Assuming the conflict is between an International Row and an Extension Row for the same concept
 				//but with distinct UUIDs, we'll let the extension row win.
-				MRCMDomain winningAR = pickWinningMRCMDomain(refComp, conflictingRanges, conflictingAttributes);
-				if (winningAR == null) {
-					//We're OK as long as only 1 of the ranges is active.  Store that one.   Otherwise, add to conflicts list to report
-					for (MRCMDomain ar : conflictingRanges.values()) {
-						MRCMDomain existing = mrcmDomainMap.get(refComp);
-						//We have a problem if the existing one is also active
-						//We'll collect all conflicts up and report back on all of them in the calling function
-						if (existing != null && existing.isActive() && ar.isActive()) {
-							String detail = " (" + ar.getId() + " in module " + ar.getModuleId() + " vs " + existing.getId() + " in module " + existing.getModuleId() + ")";
-							conflictingAttributes.add(refComp + detail);
-							acceptablyFinalised = false;
-						} else if (existing == null || ar.isActive()) {
-							mrcmDomainMap.put(refComp, ar);
-						}
-					}
-				} else {
-					mrcmDomainMap.put(refComp, winningAR);
-				}
+				acceptablyFinalised = acceptablyFinalised && resolveConflicts(domain, conflictingRanges, conflictingAttributes);
 			}
 		}
 		return acceptablyFinalised;
 	}
 
-	private MRCMDomain pickWinningMRCMDomain(Concept refComp, Map<String, MRCMDomain> conflictingRanges, List<String> conflictingAttributes) throws TermServerScriptException {
+	private boolean resolveConflicts(Concept refComp, Map<String, MRCMDomain> conflictingRanges, List<String> conflictingAttributes) {
+		boolean acceptablyFinalised = true;
+		MRCMDomain winningAR = pickWinningMRCMDomain(refComp, conflictingRanges, conflictingAttributes);
+		if (winningAR == null) {
+			//We're OK as long as only 1 of the ranges is active.  Store that one.   Otherwise, add to conflicts list to report
+			for (MRCMDomain ar : conflictingRanges.values()) {
+				MRCMDomain existing = mrcmDomainMap.get(refComp);
+				//We have a problem if the existing one is also active
+				//We'll collect all conflicts up and report back on all of them in the calling function
+				if (existing != null && existing.isActive() && ar.isActiveSafely()) {
+					String detail = " (" + ar.getId() + IN_MODULE + ar.getModuleId() + " vs " + existing.getId() + IN_MODULE + existing.getModuleId() + ")";
+					conflictingAttributes.add(refComp + detail);
+					acceptablyFinalised = false;
+				} else if (existing == null || ar.isActive()) {
+					mrcmDomainMap.put(refComp, ar);
+				}
+			}
+		} else {
+			mrcmDomainMap.put(refComp, winningAR);
+		}
+		return acceptablyFinalised;
+	}
+
+	private MRCMDomain pickWinningMRCMDomain(Concept refComp, Map<String, MRCMDomain> conflictingRanges, List<String> conflictingAttributes) {
 		//Return 1 active row for each of INT and EXT, or null if there's no active row, or multiple active rows
 		MRCMDomain intAR = pickActiveMRCMDomain(conflictingRanges, true);
 		MRCMDomain extAR = pickActiveMRCMDomain(conflictingRanges, false);
 		if (intAR != null && extAR != null) {
-			String detail = " (" + intAR.getId() + " in module " + intAR.getModuleId() + " vs " + extAR.getId() + " in module " + extAR.getModuleId() + ")";
+			String detail = " (" + intAR.getId() + IN_MODULE + intAR.getModuleId() + " vs " + extAR.getId() + IN_MODULE + extAR.getModuleId() + ")";
 			conflictingAttributes.add(refComp + detail);
 			return extAR;
 		}
@@ -136,9 +140,9 @@ public class MRCMDomainManager implements ScriptConstants  {
 
 	private MRCMDomain pickActiveMRCMDomain(Map<String, MRCMDomain> conflictingRanges, boolean isInternational) {
 		List<MRCMDomain> activeRanges = conflictingRanges.values().stream()
-				.filter(ar -> ar.isActive())
+				.filter(Component::isActive)
 				.filter(ar -> isInternational == SnomedUtils.isInternational(ar))
-				.collect(Collectors.toList());
+				.toList();
 		if (activeRanges.size() == 1) {
 			return activeRanges.get(0);
 		}
@@ -153,7 +157,7 @@ public class MRCMDomainManager implements ScriptConstants  {
 		List<String> conflictingAttributes = new ArrayList<>();
 		boolean allContentAcceptable = finaliseMRCMDomain(mrcmStagingDomainMap, mrcmDomainMap, conflictingAttributes);
 
-		if (conflictingAttributes.size() > 0) {
+		if (!conflictingAttributes.isEmpty()) {
 			String msg = "MRCM Domain File conflicts: \n";
 			msg += conflictingAttributes.stream().collect(Collectors.joining(",\n"));
 			if (allContentAcceptable || !gl.isRunIntegrityChecks()) {
